borked fireflies implementation
Co-authored-by: AlliasGhorbani <AlliasGhorbani@users.noreply.github.com>

--- a/TAPN/CMakeLists.txt
+++ b/TAPN/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 set(CMAKE_CUDA_ARCHITECTURES 61 75 86 89)  # change depending on your GPU
 
 # Add the executable with .cu files
-add_executable( TAPN    petri/main.cu
+add_executable( TAPN    petri/fireflies.cu
                         petri/Arcs.cu
                         petri/Invariant.cu
                         petri/Net.cu
@@ -18,7 +18,15 @@ add_executable( TAPN    petri/main.cu
                         petri/Transition.cu
                         observer/Observer.cu)  
 
-# Set compilation flags if needed
+
+# add_executable( fireflies     petri/fireflies.cu
+#                               petri/Arcs.cu
+#                               petri/Invariant.cu
+#                               petri/Net.cu
+#                               petri/Place.cu
+#                               petri/Transition.cu
+#                               observer/Observer.cu)  
+# # Set compilation flags if needed
 set_target_properties(TAPN PROPERTIES
     CUDA_SEPARABLE_COMPILATION ON
     CUDA_STANDARD 17
