initial commit with parsable euler just need to add path and the file

--- a/TAPN/CMakeLists.txt
+++ b/TAPN/CMakeLists.txt
@@ -1,5 +1,6 @@
-cmake_minimum_required(VERSION 3.31)
+cmake_minimum_required(VERSION 3.28)
 project(TAPN LANGUAGES CXX CUDA)
+
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
 endif()
@@ -7,18 +8,55 @@ endif()
 set(CMAKE_CXX_FLAGS "-Wall -Wextra")
 set(CMAKE_CXX_FLAGS_DEBUG "-g")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
-set(CMAKE_CUDA_ARCHITECTURES 61 75 86 89)  # change depending on your GPU
+set(CMAKE_CUDA_ARCHITECTURES 61 75 86 89)
 
-# Add the executable with .cu files
-add_executable( TAPN    petri/fireflies.cu
-                        petri/Arcs.cu
-                        petri/Invariant.cu
-                        petri/Net.cu
-                        petri/Place.cu
-                        petri/Transition.cu
-                        observer/Observer.cu)  
+# Shared CUDA code in a static library
+add_library(petri STATIC
+    petri/Arcs.cu
+    petri/Invariant.cu
+    petri/Net.cu
+    petri/Place.cu
+    observer/Observer.cu
+    petri/Transition.cu
+)
 
-set_target_properties(TAPN PROPERTIES
+# Required for separable compilation to work across targets
+set_target_properties(petri PROPERTIES
+    CUDA_SEPARABLE_COMPILATION ON
+    CUDA_STANDARD 17
+    CUDA_STANDARD_REQUIRED YES
+    POSITION_INDEPENDENT_CODE ON
+)
+
+# Euler executable
+add_executable(euler
+    petri/euler.cu
+)
+target_link_libraries(euler PRIVATE petri)
+set_target_properties(euler PROPERTIES
+    CUDA_SEPARABLE_COMPILATION ON
+    CUDA_STANDARD 17
+    CUDA_STANDARD_REQUIRED YES
+)
+
+# Fireflies executable
+add_executable(fireflies
+    petri/fireflies.cu
+)
+target_link_libraries(fireflies PRIVATE petri)
+set_target_properties(fireflies PROPERTIES
+    CUDA_SEPARABLE_COMPILATION ON
+    CUDA_STANDARD 17
+    CUDA_STANDARD_REQUIRED YES
+)
+
+# Parser executable (includes rapidxml)
+add_executable(parser
+    parser/parser.cu
+)
+target_include_directories(parser PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../rapidxml)
+target_link_libraries(parser PRIVATE petri)
+set_target_properties(parser PROPERTIES
     CUDA_SEPARABLE_COMPILATION ON
     CUDA_STANDARD 17
     CUDA_STANDARD_REQUIRED YES
